--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Tuba Store</title>
+		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">	
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
@@ -27,7 +27,7 @@
 		
 		<main>
 			<section class="principal">
-				<h2 class="titulo-principal">Sobre a Tuba Store</h2>
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
 				<img src="utensilios.jpg" alt="Utensilios de barbeiro" class="utensilios">
 				
